# leoflow

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-app.yml
docs/: cli.md  concepts.md  generated-project.md  index.md  registry.md  workflow-spec.md
docs/examples/: build-from-spec.md  create-and-run.md  iberia-wildfire.md  publish-download.md
examples/: polygon.geojson  sentinel-l0-flood.yaml  wildfire-detection-executable.yaml  wildfire-detection.yaml
examples/iberia-wildfire-detection/: README.md  last-run-rpi4.json  requirements.txt  workflow.yaml
examples/iberia-wildfire-detection/resources/: README.md
examples/iberia-wildfire-detection/runtime/: core.py  task_runtime.py  task_support.py
examples/iberia-wildfire-detection/tasks/: README.md
examples/iberia-wildfire-detection/tests/: test_workflow.py
examples/sentinel-l0-flood/: README.md  requirements.txt  workflow.yaml
examples/sentinel-l0-flood/resources/: README.md  austria-east.geojson
examples/sentinel-l0-flood/runtime/: __init__.py  core.py  task_runtime.py  task_support.py
examples/sentinel-l0-flood/scripts/: run_snap_raw_focus.py
examples/sentinel-l0-flood/tests/: test_focus_level0.py  (+2 more)
examples/wildfire-detection/: README.md  workflow.yaml
leoflow_store/: __init__.py  cli.py
leoflow_store/api/: __init__.py  download.py  generate.py  publish.py  search.py
leoflow_store/core/: __init__.py  generator.py  parser.py  registry.py  scaffold.py  validator.py
tests/: test_cli.py  test_executable_runtime.py  test_store.py
(+67 files in other folders)
